k8s/database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: study-planner
spec:
  selector:
    app: database
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
